sample/retrieveUnpackaged/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>ANZSIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ANZSIC</label>
        <referenceTo>Anzic_Code__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Also_Known_As__c</fullName>
        <description>Address also known as field to assit with alternative identification on the property.
Sourced from HiAffinity in the Service Unit details.</description>
        <inlineHelpText>Address also known as field to assit with alternative identification on the property.</inlineHelpText>
        <label>Address Also Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allotment_Area__c</fullName>
        <label>Allotment Area</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Body Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_Property_Id__c</fullName>
        <description>Property reference number in HiAF</description>
        <externalId>true</externalId>
        <label>CIS Property Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Council_Property_Reference_No__c</fullName>
        <label>Council Property Reference No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Council_Property_Type__c</fullName>
        <label>Council Property Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Council__c</fullName>
        <label>Council</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPID__c</fullName>
        <label>DPID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Target_per_Person__c</fullName>
        <label>Daily Target per Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Meter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag field that determines if a property belongs to digital meter trial.</description>
        <label>Digital Meter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directory_Reference__c</fullName>
        <label>Directory Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Type__c</fullName>
        <label>Directory Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECO_Area__c</fullName>
        <label>Area</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECO_Connected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if property is connected</description>
        <label>Connected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECO_Developer_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if property is being serviced under a developer scheme</description>
        <label>Developer Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECO_Eligibility__c</fullName>
        <label>ECO Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Ineligible</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe-Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ECO_Multiple_Parcel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of a multi parcel property.</description>
        <label>Multiple Parcel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECO_Property_Classification__c</fullName>
        <description>Property classification e.g. Vacant</description>
        <label>Property Classification</label>
        <picklist>
            <picklistValues>
                <fullName>No Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rated with other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ECO_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ECO Region</label>
        <referenceTo>ECO_Region__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ECO_Sewer_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if sewer is available for connection</description>
        <label>Sewer Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECO_Sewer_Type__c</fullName>
        <description>Type of sewer service if available</description>
        <label>Sewer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gravity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grid_Coordinate_X__c</fullName>
        <label>Grid Coordinate X</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Coordinate_Y__c</fullName>
        <label>Grid Coordinate Y</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Insurance_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Insurance Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Name__c</fullName>
        <label>Property Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICE_Property_Id__c</fullName>
        <externalId>true</externalId>
        <label>ICE Property Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Logical_Meter_Count__c</fullName>
        <label>Logical Meter Count</label>
        <summaryFilterItems>
            <field>Meter_Details__c.Meter_Type__c</field>
            <operation>equals</operation>
            <value>L</value>
        </summaryFilterItems>
        <summaryForeignKey>Meter_Details__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lot_No__c</fullName>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSP_Number__c</fullName>
        <label>PSP Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_CIS_Property_Id__c</fullName>
        <label>Parent CIS Property Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People_over_18__c</fullName>
        <label>People over 18</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>People_under_18__c</fullName>
        <label>People under 18</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Extension_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Extension Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Setup_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profile Setup Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Usage__c</fullName>
        <label>Property Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Body Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park / Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit / Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R6_Avenview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recycled Stormwater - Avenview Estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recycled_Meter_Count__c</fullName>
        <label>Recycled Meter Count</label>
        <summaryFilterItems>
            <field>Meter_Details__c.Name</field>
            <operation>startsWith</operation>
            <value>R</value>
        </summaryFilterItems>
        <summaryForeignKey>Meter_Details__c.Property__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recycled_Water_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recycled Water Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Parcel_Id__c</fullName>
        <label>Standard Parcel Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>VIC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_Proper__c</fullName>
        <label>Street Address (Proper)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subdivision_Plan_No__c</fullName>
        <label>Subdivision Plan No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_Proper__c</fullName>
        <label>Suburb (Proper)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Waste_Code__c</fullName>
        <label>Trade Waste Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Id_c__c</fullName>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valuation_Amount__c</fullName>
        <label>Valuation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1_Meter_Multi_Props__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Property has 1 Meter with Multiple Properties.</description>
        <inlineHelpText>Property has 1 Meter with Multiple Properties. 1M classification code in HiAffinity.</inlineHelpText>
        <label>1 Meter with Multiple Properties</label>
        <type>Checkbox</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CIS_Property_Id__c</columns>
        <columns>NAME</columns>
        <columns>Street_Address__c</columns>
        <columns>Suburb__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Parent_CIS_Property_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Body_Corporate_Properties</fullName>
        <columns>NAME</columns>
        <columns>Street_Address__c</columns>
        <columns>Subdivision_Plan_No__c</columns>
        <columns>Suburb__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Body_Corporate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Body Corporate Properties</label>
    </listViews>
    <listViews>
        <fullName>Domestic_Properties</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Address_Also_Known_As__c</columns>
        <columns>Council__c</columns>
        <columns>CIS_Property_Id__c</columns>
        <columns>Lot_No__c</columns>
        <columns>Property_Type__c</columns>
        <columns>House_Name__c</columns>
        <columns>Street_Address__c</columns>
        <columns>Suburb__c</columns>
        <columns>Parent_CIS_Property_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Type__c</field>
            <operation>contains</operation>
            <value>Domestic</value>
        </filters>
        <filters>
            <field>Property_Type__c</field>
            <operation>notContain</operation>
            <value>ND</value>
        </filters>
        <filters>
            <field>Property_Type__c</field>
            <operation>notContain</operation>
            <value>Non Domestic</value>
        </filters>
        <label>Domestic Properties</label>
    </listViews>
    <listViews>
        <fullName>Non_Domestic_Properties</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Address_Also_Known_As__c</columns>
        <columns>Council__c</columns>
        <columns>CIS_Property_Id__c</columns>
        <columns>Lot_No__c</columns>
        <columns>Property_Type__c</columns>
        <columns>House_Name__c</columns>
        <columns>Street_Address__c</columns>
        <columns>Suburb__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property_Type__c</field>
            <operation>contains</operation>
            <value>Non Domestic</value>
        </filters>
        <label>Non Domestic Properties</label>
    </listViews>
    <listViews>
        <fullName>Port_Phillip</fullName>
        <columns>NAME</columns>
        <columns>Council_Property_Type__c</columns>
        <columns>Council__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Council__c</field>
            <operation>contains</operation>
            <value>Port Phillip</value>
        </filters>
        <label>Port Phillip Properties</label>
    </listViews>
    <nameField>
        <label>Property</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>